syntax = "proto3";

package test_oneof;

option go_package = "./oneof";

message TestOneofMessage {
  oneof one_of_field1 {
    bool field1 = 1;
    int64 field2 = 2;
  }

  oneof one_of_field2 {
    int32 field3 = 3;
    TestOneofMessage field4 = 4;
  }
}
